# ESP32-S3-Touch-LCD-1.83

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: discover_esp_idf_examples.py
.github/workflows/: esp-idf-examples.yml  examples.yml
config/: README.md
docs/: brookesia.md  ci.md  components.md  firmware.md  repository-structure.md
examples/ESP-IDF/01_AXP2101/: sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/ESP-IDF/02_lvgl_demo_v9/: sdkconfig
examples/ESP-IDF/03_esp-brookesia/: CMakeLists.txt  partitions.csv  sdkconfig
examples/ESP-IDF/04_Immersive_block/: sdkconfig.defaults  sdkconfig.old
examples/ESP-IDF/05_Spec_Analyzer/: sdkconfig
examples/ESP-IDF/05_Spec_Analyzer/main/: CMakeLists.txt  idf_component.yml
examples/ESP-IDF/06_videoplayer/: sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/arduino/01_HelloWorld/: 01_HelloWorld.ino
examples/arduino/02_Drawing_board/: 02_Drawing_board.ino
examples/arduino/05_GFX_Clock/: 05_GFX_Clock.ino
examples/arduino/06_GFX_PCF85063_simpleTime/: 06_GFX_PCF85063_simpleTime.ino
examples/arduino/07_LVGL_PCF85063_simpleTime/: 07_LVGL_PCF85063_simpleTime.ino
examples/arduino/09_LVGL_Arduino/: 09_LVGL_Arduino.ino
examples/esp-idf/01_AXP2101/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
examples/esp-idf/02_lvgl_demo_v9/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/esp-idf/03_esp-brookesia/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
examples/esp-idf/03_esp-brookesia/components/apps/: CMakeLists.txt  apps.h
examples/esp-idf/03_esp-brookesia/components/apps/draw/: Drawpanel.cpp  Drawpanel.hpp
firmware/: README.md
releases/: README.md  download_artifacts.py  download_artifacts_impl.py  package_firmware.py
scripts/: discover_examples.py
videos/: test1.avi
(+61 files in other folders)
